// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregatedCostsAndCharges should match snapshot when all data is loaded successfully 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
    data-component="AggregatedCostsAndCharges"
    data-element="Grid"
    data-source-file="AggregatedCostsAndCharges.tsx"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
      data-element="Grid"
      data-source-file="AggregatedCostsAndCharges.tsx"
    >
      <div
        class="MuiGrid-root makeStyles-container-21 MuiGrid-container MuiGrid-direction-xs-column"
        data-component="PageHeader"
        data-element="Grid"
        data-source-file="PageHeader.tsx"
      >
        <div
          class="MuiGrid-root makeStyles-header-20 MuiGrid-container"
          data-element="Grid"
          data-source-file="PageHeader.tsx"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
            data-element="Grid"
            data-source-file="PageHeader.tsx"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
              data-element="Typography"
              data-source-file="PageHeader.tsx"
            >
              Aggregated Costs and Charges
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
            data-component="Breadcrumbs"
            data-element="MuiBreadcrumbs"
            data-source-file="Breadcrumbs.tsx"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-23"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
    </div>
    <div
      class="MuiGrid-root makeStyles-wrapper-27 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      data-component="LoadingIndicator"
      data-element="Grid"
      data-source-file="LoadingIndicator.tsx"
      style="opacity: 0.75;"
    >
      <div
        class="MuiBox-root MuiBox-root-28"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiBox-root MuiBox-root-29"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        data-element="CircularProgress"
        data-source-file="LoadingIndicator.tsx"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
      data-element="Grid"
      data-source-file="AggregatedCostsAndCharges.tsx"
    >
      <div
        class="MuiBox-root MuiBox-root-30"
        data-component="VSpacer"
        data-element="Box"
        data-source-file="VSpacer.tsx"
      />
      <div
        class="MuiPaper-root MuiAccordion-root makeStyles-root-31 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
        data-component="ReportsAccordion"
        data-element="Accordion"
        data-source-file="ReportsAccordion.tsx"
      >
        <div
          aria-disabled="false"
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root makeStyles-summaryWrapper-32"
          data-element="AccordionSummary"
          data-source-file="ReportsAccordion.tsx"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content makeStyles-summaryContent-33"
          >
            <p
              class="MuiTypography-root makeStyles-summary-34 MuiTypography-body1 MuiTypography-colorPrimary"
              data-element="Typography"
              data-source-file="ReportsAccordion.tsx"
            >
              Fees (SGD)
            </p>
          </div>
          <div
            aria-disabled="false"
            aria-hidden="true"
            class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon MuiIconButton-edgeEnd"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-hidden"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <div
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root makeStyles-detailsWrapper-35"
                  data-element="AccordionDetails"
                  data-source-file="ReportsAccordion.tsx"
                >
                  <div
                    class="MuiTableContainer-root"
                    data-component="FeesTable"
                    data-element="TableContainer"
                    data-source-file="FeesTable.tsx"
                  >
                    <table
                      class="MuiTable-root"
                      data-element="Table"
                      data-source-file="FeesTable.tsx"
                    >
                      <thead
                        class="MuiTableHead-root"
                        data-element="TableHead"
                        data-source-file="FeesTable.tsx"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                          data-element="TableRow"
                          data-source-file="FeesTable.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignLeft"
                            scope="col"
                          >
                            Date
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignCenter"
                            scope="col"
                          >
                            Description
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headColumn-36 MuiTableCell-alignLeft"
                            scope="col"
                          >
                            Amount
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                        data-element="TableBody"
                        data-source-file="FeesTable.tsx"
                      >
                        <tr
                          class="MuiTableRow-root makeStyles-row-41 makeStyles-row-46"
                          data-component="FeesRow"
                          data-element="TableRow"
                          data-source-file="FeesRow.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                            role="cell"
                            scope="row"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          >
                            Other Fees
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          />
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-41 makeStyles-row-48"
                          data-component="FeesRow"
                          data-element="TableRow"
                          data-source-file="FeesRow.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                            role="cell"
                            scope="row"
                          >
                            2021-11-29, 01:26 AM
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          >
                            Primary issuance fee
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          >
                            10.00
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root makeStyles-row-41 makeStyles-row-50"
                          data-component="FeesRow"
                          data-element="TableRow"
                          data-source-file="FeesRow.tsx"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                            role="cell"
                            scope="row"
                          >
                            Total
                          </th>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignLeft"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          />
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-column-38 MuiTableCell-alignRight"
                            data-element="TableCell"
                            data-source-file="FeesRow.tsx"
                          >
                            10.00
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AggregatedCostsAndCharges should match snapshot when data is loaded successfully and sgd field is empty array 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root makeStyles-container-54 MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root makeStyles-header-53 MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Aggregated Costs and Charges
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-56"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-60"
      />
      <div
        class="MuiGrid-root makeStyles-wrapper-61 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-64"
          />
          <svg
            style="max-width: 100%;"
          >
            no_data.svg
          </svg>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          />
          <p
            class="MuiTypography-root makeStyles-subtitle-62 MuiTypography-body1"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root MuiBox-root-66"
          />
          <p
            class="MuiTypography-root makeStyles-content-63 MuiTypography-body1"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root MuiBox-root-67"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AggregatedCostsAndCharges should match snapshot when data is loaded successfully and usd field is empty array 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root makeStyles-container-73 MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root makeStyles-header-72 MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Aggregated Costs and Charges
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-75"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-79"
      />
      <div
        class="MuiGrid-root makeStyles-wrapper-80 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-83"
          />
          <svg
            style="max-width: 100%;"
          >
            no_data.svg
          </svg>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-84"
          />
          <p
            class="MuiTypography-root makeStyles-subtitle-81 MuiTypography-body1"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root MuiBox-root-85"
          />
          <p
            class="MuiTypography-root makeStyles-content-82 MuiTypography-body1"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root MuiBox-root-86"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AggregatedCostsAndCharges should match snapshot when data is undefined 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiGrid-root makeStyles-container-3 MuiGrid-container MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root makeStyles-header-2 MuiGrid-container"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Aggregated Costs and Charges
            </h2>
          </div>
        </div>
        <div
          class="MuiGrid-root"
        >
          <nav
            class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            <ol
              class="MuiBreadcrumbs-ol"
            />
          </nav>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-5"
      />
    </div>
    <div
      class="MuiGrid-root makeStyles-wrapper-9 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-center"
      style="opacity: 0.75;"
    >
      <div
        class="MuiBox-root MuiBox-root-10"
      />
      <div
        class="MuiBox-root MuiBox-root-11"
      />
      <div
        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-12"
      />
      <div
        class="MuiGrid-root makeStyles-wrapper-13 MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-16"
          />
          <svg
            style="max-width: 100%;"
          >
            no_data.svg
          </svg>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiBox-root MuiBox-root-17"
          />
          <p
            class="MuiTypography-root makeStyles-subtitle-14 MuiTypography-body1"
          >
            This page is empty.
          </p>
          <div
            class="MuiBox-root MuiBox-root-18"
          />
          <p
            class="MuiTypography-root makeStyles-content-15 MuiTypography-body1"
          >
            There are no records to display for the selected report.
          </p>
          <div
            class="MuiBox-root MuiBox-root-19"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
